manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: autogen-studio-service
spec:
  selector:
    app: autogen-studio
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
